# tryrust.org

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  bun.lockb  leptosfmt.toml  package.json  rust-analyzer.toml  tailwind.config.js  tailwind.css
.github/workflows/: rust.yml
assets/: tailwind.css
src/: app.rs  context.rs  exercises.rs  instruction.rs  lib.rs  main.rs  playground.rs  redirect.rs  server.rs  terminal.rs
src/exercises/: exercise_00.rs  exercise_01.rs  exercise_02.rs  exercise_03.rs  exercise_04.rs  exercise_05.rs  exercise_06.rs  exercise_07.rs
src/server/: compile.rs  session.rs
style/: output.css
