[package]
name = "tryrust"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["fullstack"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4"
regex = "1"
tokio = { version = "1", features = ["full", "rt-multi-thread", "process"] }
tracing-subscriber = "0.3"

[features]
default = ["web", "server"]
web = ["dioxus/web"]
server = ["dioxus/server"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
